# PortfolioQtOpt

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt
app/: app.py  app_c.py
application/: app.py  app_c.py  exploration.py  memory.py
docs/source/: api.rst  application.rst  conf.py  index.rst  markovitz_portfolio.rst  optimization.rst  refs.bib
docs/source/api/: assets.rst  interpreter.rst  interpreter_utils.rst  main.rst  markovitz_portfolio.rst  optimization.rst  qubo.rst  reader.rst  simulation.rst
docs/source/application/: app.rst  core.rst  record.rst  streamlit_debug.rst  utils.rst
docs/source/simulation/: example_1.ipynb  example_2.ipynb  poly_root_convergence.ipynb
portfolioctopt/: QuboBuilder.py  SymmetricToTriangular.py  dwave_solver.py
portfolioqtopt/: Covariance_calculator.py  Expand_Prices.py  ExpectedReturn_calculator.py  PortfolioSelection.py  Portfolio_Calculation.py  Portfolio_Multiple_Main.py  QuboBuilder.py  SymmetricToTriangular.py  __init__.py  assets.py  assets_.py  dwave_solver.py  expand_prices.py  expected_return.py  expected_return_calculator.ipynb  expected_return_calculator.py  interpreter.py  interpreter_utils.py  log.py  main.py  markovitz_portfolio.py  optimizer.py  portfolio_calculation.py  portfolio_selection.py  qubo.py  reader.py  symmetric_to_triangular.py  utils.py
portfolioqtopt/application/: __init__.py  app.py  memory.py  new_app.py  prueba.py  session_state_.py  utils.py
portfolioqtopt/optimization/: __init__.py  _interpreter.py  _main.py  _optimization.py  _qbits.py  _qubo.py  assets_.py  interpreter.py  interpreter_.py  main_.py  markovitz_portfolio.py  optimization.py  optimization_.py  optimizer.py  qubo.py  qubo_.ipynb  qubo_.py  utils.py
portfolioqtopt/simulation/: __init__.py  simulation.py  stocks.py
qoptimiza/: __init__.py  assets.py  log.py  main.py
qoptimiza/application/: __init__.py  app.py  core.py  memory.py  record.py  streamlit_debug.py  utils.py
qoptimiza/optimization/: __init__.py  interpreter.py  optimization.py  qubo.py
qoptimiza/simulation/: __init__.py  errors.py  simulation.py
scripts/: app.sh  container.sh  docs.sh  format-import.sh  format.sh  lint.sh  requirements.sh  tests.sh
tests/: conftest.py  test_Expand_Prices.py  test_ExpectedReturn_calculator.py  test_expand_prices.py  test_expected_return_calculator.py  test_markowitz_portfolio.py  test_optimizer.py  test_reader.py
tests/test_optimization/: test_optimization_.py  test_optimizer.py
tests/test_reader/: data_welzia.xlsm
tests/test_simulation/: test_simulation.py
to_remove/: interpreter_dev.py  interpreter_utils.py  qubo.py  utils.ipynb  utils.py
