[tool.poetry]
name = "portfolioqtopt"
version = "0.1.0"
description = ""
authors = ["ggelabert <ggelabert@serikat.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24.0"
dwave-ocean-sdk = "^6.1.1"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
loguru = "^0.6.0"
pandera = "^0.13.4"
pandas-datareader = "^0.10.0"
dotenv = "^0.0.5"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.0"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
ipykernel = "^6.19.4"
pandas-stubs = "^1.5.2.221213"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
isort = "^5.11.4"
black = "^22.12.0"
mypy = "^0.991"


[tool.poetry.group.docs.dependencies]
jupytext = "^1.14.4"
nbsphinx = "^0.8.11"
sphinx-copybutton = "^0.5.1"
myst-parser = "^0.18.1"
sphinx = ">=3,<5"
matplotlib = "^3.6.3"
jupyter = "^1.0.0"
sphinx-book-theme = "^0.3.3"
sphinxcontrib-bibtex = "^2.5.0"
black = {extras = ["jupyter"], version = "^22.12.0"}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
